@@ -90,7 +90,10 @@
      * @return  string
      */
     public function getSimpleName() {
-      return substr($this->name, strrpos($this->name, '.')+ 1);
+      return FALSE === ($p= strrpos($this->name, '.')) 
+        ? $this->name                   // Already unqualified
+        : substr($this->name, $p+ 1)    // Full name
+      ;
     }
     
     /**
